// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for basic columns 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
  </div>
</div>
`;

exports[`renders correctly for gapless columns 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
  </div>
</div>
`;

exports[`renders correctly for one line columns 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 -0.5rem;
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
  </div>
</div>
`;

exports[`renders correctly when minBreakpoint is "mobile" 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
  </div>
</div>
`;

exports[`renders correctly when minBreakpoint is "tablet" 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
    <div
      class="c3 c1"
    >
      Column
    </div>
  </div>
</div>
`;
